--- a/order/css/style.css
+++ b/order/css/style.css
@@ -64,10 +64,10 @@ hr {
 @media (orientation: portrait) {
   .cont {
     -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
   }
 }
 .myars {
